--- a/exercicios/Aula 2/exercicio 1.html
+++ b/exercicios/Aula 2/exercicio 1.html
@@ -10,7 +10,8 @@
     <li>Treinar</li>
     <li>Jogar</li>
     <li>Ler</li>
-    <li>Esportes(volei)</li>
+    <li>E
+        sportes(volei)</li>
     <li>Estudar</li>
 
 </ul>
