--- a/exercicios/Aula 2/exercico 6.html
+++ b/exercicios/Aula 2/exercico 6.html
@@ -10,32 +10,33 @@
 <h5>Tags de texto</h5>
 <ol>
     <li>exercicio 1</li>
-<a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%201.html"target="_blank">link para ex1</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%201.html" target="_blank">link para ex1</a>
     <li>exercicio 2</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202.html"target="_blank">link para ex2</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202.html" target="_blank">link para ex2</a>
     <li>exercicio 2.2</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202%20(parte%202).html"target="_blank">link para ex2.2</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202%20(parte%202).html" target="_blank">link para
+        ex2.2</a>
     <li>exercicio 3</li>
     <a href="http://localhost:63342/web_senai/exercicios/Aula%201/exercicio3.html""target="_blank">link para ex3</a>
-
 
 
 </ol>
 <h3>11/08/2025</h3>
 <ol>
     <li>exercicio 1</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%201.html"target="_blank">link para exercicio 1</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%201.html" target="_blank">link para
+        exercicio 1</a>
     <li>exercicio 2</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%202.html"target="_blank">link para ex2</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%202.html" target="_blank">link para ex2</a>
     <li>exercicio 3</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%203.html"target="_blank">link para ex3</a>
+    <a href="
+    http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%203.html" target="_blank">link para ex3</a>
     <li>exercicio 4</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%204.html"target="_blank">link para ex4</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%204.html" target="_blank">link para ex4</a>
     <li>exercicio 5</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/Exefrcicio%205.html"target="_blank">link para ex5</a>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/Exefrcicio%205.html" target="_blank">link para ex5</a>
     <li>exercicio 6</li>
-    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercico%206.html"target="_blank">link para ex6</a>
-
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercico%206.html" target="_blank">link para ex6</a>
 
 
 </ol>
