--- a/exercicios/Aula 2/exercicio 1.html
+++ b/exercicios/Aula 2/exercicio 1.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <p>
-    <ul>
+<ul>
     <li>Treinar</li>
     <li>Jogar</li>
     <li>Ler</li>
-    <li>E
-        sportes(volei)</li>
+    <li>Esportes(volei)
+    </li>
     <li>Estudar</li>
 
 </ul>
