--- a/exercicios/Aula 2/exercicio 3.html
+++ b/exercicios/Aula 2/exercicio 3.html
@@ -21,16 +21,15 @@
     <li>pimenta-do-reino moida na hora a gosto</li>
 
 
-
-
 </ul>
 <h3> Modo de preparo</h3>
 <ol>
     <li>Numa tigela média coloque as bistecas, adicione o sal, o açucar e <br>
-    a páprica e esfregue bem toda a superficie da carne. Junte as <br>
-    folhas de louro e cubra com água. Tampe a tigela com um prato <br>
-    e deixe descansar em temperatura ambiente por 20 minutos -<br>
-    esse soro deixa a bistema mais úmida depois de grelhada</li>
+        a páprica e esfregue bem toda a superficie da carne. Junte as <br>
+        folhas de louro e cubra com água. Tampe a tigela com um prato <br>
+        e deixe descansar em temperatura ambiente por 20 minutos -<br>
+        esse soro deixa a bistema mais úmida depois de grelhada
+    </li>
     <br>
 
     <li> com uma pinça, retire as bistecas da água e seuque bem cada uma<br>
@@ -38,20 +37,14 @@
     </li>
     <br>
     <li> Leve uma frigideira grande ao fogo médio para aquecer. Quando<br>
-    estiver bem quente, regue com 1 colher (sopa) de azeite e coloque<br>
-    as bistecas uma ao lado da outra. Tempere com pimenta-do-reibo<br>
-    a gosto, junte os ramos de sálvia e deixe dorar por cerca de 3<br>
-    minutos de cada lado. Sirva a seguir</li>
-
-
-
-
-
-
+        estiver bem quente, regue com 1 colher (sopa) de azeite e coloque<br>
+        as bistecas uma ao lado da outra. Tempere com pimenta-do-reibo<br>
+        a gosto, junte os ramos de sálvia e deixe dorar por cerca de 3<br>
+        minutos de cada lado. Sirva a seguir
+    </li>
 
 
 </ol>
-
 
 
 </p>
