--- a/exercicios/Aula 3/exercicio 4.html
+++ b/exercicios/Aula 3/exercicio 4.html
@@ -6,17 +6,54 @@
 </head>
 <body>
 <a href="https://www.sp.senai.br/"><img src="assets/senai.png" alt=""></a>
-<h3>Linguagem de marcação</h3>
-<h4>18/08/2025</h4>
-<h3>Imgem e Vidio</h3>
-<h2>exercicio 1</h2>
-<a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercico%201.html">link ex 1</a>
-<br>
-<h2>exercicio 2</h2>
-<a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercicio%202.html">link ex 2</a>
-<br>
-<h2>exercicio 3</h2>
-<a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercicio%203.html">link ex 3</a>
+<h1>Linguagem de Marcação</h1>
+<H3>04/08/2025</H3>
+<h5>Tags de texto</h5>
+<ol>
+    <li>exercicio 1</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%201.html" target="_blank">link para ex1</a>
+    <li>exercicio 2</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202.html" target="_blank">link para ex2</a>
+    <li>exercicio 2.2</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/ex%202%20(parte%202).html" target="_blank">link para
+        ex2.2</a>
+    <li>exercicio 3</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%201/exercicio3.html" target="_blank">link para ex3</a>
+
+
+</ol>
+<h3>11/08/2025</h3>
+<h2>Links e lista</h2>
+<ol>
+    <li>exercicio 1</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%201.html" target="_blank">link para
+        exercicio 1</a>
+
+    <li>exercicio 2</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%202.html" target="_blank">link para ex2</a>
+    <li>exercicio 3</li>
+    <a href="
+    http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%203.html" target="_blank">link para ex3</a>
+    <li>exercicio 4</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercicio%204.html" target="_blank">link para ex4</a>
+    <li>exercicio 5</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/Exefrcicio%205.html" target="_blank">link para ex5</a>
+    <li>exercicio 6</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%202/exercico%206.html" target="_blank">link para ex6</a>
+
+
+</ol>
+<ul>
+    <h3>Linguagem de marcação</h3>
+    <h4>18/08/2025</h4>
+    <h3>Imgem e Vidio</h3>
+    <li>exercicio 1</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercico%201.html">link ex 1</a>
+    <li>exercicio 2</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercicio%202.html">link ex 2</a>
+    <li>exercicio 3</li>
+    <a href="http://localhost:63342/web_senai/exercicios/Aula%203/exercicio%203.html">link ex 3</a>
+</ul>
 <br>
 </body>
 </html>
