--- a/exercicios/Aula 2/exercicio 4.html
+++ b/exercicios/Aula 2/exercicio 4.html
@@ -43,7 +43,7 @@
     <ul>
         <li>Técnico em Informática</li>
         <li>Técnico em Mecânica</li>
-        <li>Técnico em Mecatrônica</li
+        <li>Técnico em Mecatrônica</li>
 
     </ul>
 
