--- a/Aula 1/ex 1.html
+++ b/Aula 1/ex 1.html
@@ -5,7 +5,7 @@
     <title>Exercicio 1</title>
 </head>
 <body>
-<p> <li>O HTML  <em>(HyperText Markup Language)</em> é a base <br>  fundamental da <u>construção de paginas </u>na web. <
+<p> <li>O HTML  <em>(HyperText Markup Language)</em> é a base <br>  fundamental da <u>construção de paginas </u>na web.
     Ao longo dos anos,<br> essa linguagem tem evoluido <u> <strong>significativamente, </strong></u><br>
     tornando-se mais <em><strong>rosbusta </strong></em> e capaz de lidar com a crescente <br>demanda po
     conteúdos dinâmicos e interativos. Entender<br> <strong> HTML </strong> é essencial para qualquer pessoa
