--- a/exercicios/Aula 4/exercicio 4.html
+++ b/exercicios/Aula 4/exercicio 4.html
@@ -5,10 +5,10 @@
     <title>ex4</title>
 </head>
 <body>
-<h5> questões mutipla escolja - Posicionamento</h5>
+<h5> questões mutipla escola - Posicionamento</h5>
 <form>
     <ol>
-        <li> De acordocom a matiz de vantagem competitiva de Boston Consulting Group, o <br>
+        <li> De acordo com a matiz de vantagem competitiva de Boston Consulting Group, o <br>
             o setor no qual as empresas podem obter poucas, mas grande vantagens competitivas é <br> o ______________
         </li>
         <input id="Radio_a" type="radio" name="genero" value="setor de volume">setor de volume
@@ -62,6 +62,6 @@
 
     </ol>
     <br>
-
+</form>
 </body>
 </html>
