--- a/exercicios/aula 8/ex4.html
+++ b/exercicios/aula 8/ex4.html
@@ -42,19 +42,19 @@
 
 <div class="opition">
     <div>
-        <img src="assets/megafone_ex4.png" alt="Error 404" class="img">
-        <h3>Fully Managed<br> Media Buying</h3>
+        <img src="assets/speaker.png" alt="Error 404" class="img">
+       <bold> <h3>Fully Managed<br> Media Buying</h3></bold>
         <p>Breathe easy. Our team of experienced<br> media buyers is looking after your<br> campaigns 24/7.</p>
     </div>
     <div>
-        <img src="assets/tel_atv4.png" alt="Error 404" class="img">
-        <h3>Facebook "Bat Phone"<br> for VIP Support</h3>
+        <img src="assets/phone-call.png" alt="Error 404" class="img">
+        <bold><h3>Facebook "Bat Phone"<br> for VIP Support</h3></bold>
         <p>Shut downs are a real problem even for<br> businesses doing everything right.<br> Lucky for us, help is just
             a text away<br> with our Premier Level Agency Partner<br> access</p>
     </div>
     <div>
-        <img src="assets/chat_ex4.png" alt="Error 404" class="img">
-        <h3>Managed Creative<br> for Ads</h3>
+        <img src="assets/chat.png" alt="Error 404" class="img">
+       <bold> <h3>Managed Creative<br> for Ads</h3></bold>
         <p>We know what works best for Facebook<br> ads, and we'll create what we need<br> using your existing assets
         </p>
     </div>
